feat(agent): 优化系统信息采集功能
- 新增磁盘和文件系统信息采集
- 重构网络统计信息采集方法
- 更新 Docker 相关数据结构
- 优化系统负载和内存信息采集
- 移除不必要的依赖库
- 版本升级到1.1.2